[metadata]
name = anim_e
author = Jonathan Chang
author_email = 31893406+cccntu@users.noreply.github.com
description = Anim·E, Anime Enhenced dalle mini
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3 License :: OSI Approved :: Apache Software License Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Development Status :: 3 - Alpha
    Intended Audience :: Developers

[options]
package_dir =
    =src
packages = find:
python_requires >= 3.7
install_requires =
    vqgan-jax @ git+https://github.com/patil-suraj/vqgan-jax.git@10ef240f8ace869e437f3c32d14898f61512db12
    vit-vqgan @ git+https://github.com/patil-suraj/vit-vqgan.git@6dce733329541129f0d60cdce2487a340e726abf
    lpips-j @ git+https://github.com/pcuenca/lpips-j.git@346edee27d373d4b19265e33cb588ca17a189cb1
    datasets~=2.4.0
    flax~=0.5.3
    optax~=0.1.3
    Pillow~=9.2.0
    wandb
    # install these yourself
    #jax~=0.3.16
    #torch==1.11.0+cu115
    #torchvision==0.12.0+cu115


[options.packages.find]
where = src
